# boost_plugin_loader

./: .clang-tidy  .cmake-format  CHANGELOG.rst  CMakeLists.txt  README.md  codecov.yml  colcon.pkg  dependencies.repos  nuget_packages.config  package.xml
.github/workflows/: clang_format.yml  cmake_format.yml  code_quality.yml  mac.yml  package_debian.yml  package_nuget.yml  ubuntu.yml  ubuntu_focal.yml  windows_2019.yml  windows_2022.yml
examples/: CMakeLists.txt  example.cpp  plugin.cpp  plugin.h  plugin_impl.cpp
examples/printer/: console_printer.cpp  hello_world_printer.cpp  printer.h
examples/shape/: shape.h  square.cpp  triangle.cpp
include/boost_plugin_loader/: class_loader.h  class_loader.hpp  fwd.h  macros.h  plugin_loader.h  plugin_loader.hpp  utils.h
src/: utils.cpp
test/: CMakeLists.txt  plugin_loader_anchor_unit.cpp  plugin_loader_unit.cpp  test_plugin.h  test_plugin_add.cpp  test_plugin_base.h  test_plugin_multiply.cpp  test_plugin_multiply.h
