<?xml version="1.0"?>
<package format="2">
  <name>boost_plugin_loader</name>
  <version>0.1.0</version>
  <description>Boost plugin loader implementation</description>

  <author email="levi.armstrong@gmail.com">Levi Armstrong</author>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>boost</build_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
