<?xml version="1.0"?>
<package format="2">
  <name>boost_plugin_loader</name>
  <version>0.2.1</version>
  <description>Boost plugin loader implementation</description>

  <author email="levi.armstrong@gmail.com">Levi Armstrong</author>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>
  
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>libboost-filesystem-dev</build_depend>
  <build_export_depend>libboost-filesystem-dev</build_export_depend>
  <exec_depend>libboost-filesystem</exec_depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
